# Orchestrix-Gateway

./: .env.example  .gitignore  LICENSE  Makefile  README.md  USER_MANUAL.md  docker-compose.yml  orchestrix_gateway.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  health.py  metrics.py  schemas.py
backend/app/auth/: dependencies.py  sessions.py
backend/app/cache/: keys.py  redis_cache.py  redis_client.py
backend/app/core/: config.py  exceptions.py  logging.py  passwords.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_users_and_api_key_owner.py
backend/app/middleware/: auth.py  body_limit.py  rate_limit.py
backend/app/monitoring/: metrics.py
backend/app/providers/: anthropic.py  base.py  http_client.py  mock.py  openai.py  retry.py
backend/app/routing/: failover.py  router.py
backend/app/scripts/: create_api_key.py
backend/app/services/: cost_calculator.py  request_logger.py
backend/tests/: conftest.py
backend/tests/unit/: test_anthropic_provider.py  test_cache_keys.py  test_cost_calculator.py  test_failover.py  test_logging_redaction.py  test_mock_provider.py  test_openai_provider.py  test_passwords.py  test_retry.py  test_routing.py  test_security.py
frontend/: .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(authed)/: layout.tsx
frontend/app/(authed)/analytics/: page.tsx
frontend/app/(authed)/dashboard/: page.tsx
frontend/app/(authed)/logs/: page.tsx
frontend/app/(authed)/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: kpi-card.tsx  providers.tsx
frontend/components/auth/: auth-shell.tsx
frontend/components/charts/: provider-donut.tsx  traffic-sparkline.tsx
frontend/components/macos/: sidebar.tsx  toolbar.tsx  traffic-lights.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  skeleton.tsx
frontend/lib/: api-client.ts  format.ts  store.ts  types.ts  use-auth.ts
infra/grafana/dashboards/: orchestrix-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
