[project]
name = "orchestrix-gateway"
version = "0.1.0"
description = "Production-grade AI API Gateway for orchestrating LLM requests across providers."
requires-python = ">=3.12"
authors = [{ name = "Dhreetiman" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "redis>=5.1.0",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.12",
    "orjson>=3.10.7",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─────────────────────────────────────────────────────────────
# Ruff
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",        # pycodestyle, pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "SIM",                # simplify
    "RUF",                # ruff-specific
    "ASYNC",              # async correctness
]
ignore = ["E501"]         # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI's idiomatic DI uses `Depends(...)` and friends in arg defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
    "fastapi.Cookie",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────────────────────────
# Mypy
# ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
show_error_codes = true
files = ["app"]
exclude = ["app/db/migrations/versions"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
